refactor, get target instance from script environment at execution time